fix: add z-index to ensure close button remains clickable

--- a/_src/_assets/css/layout.scss
+++ b/_src/_assets/css/layout.scss
@@ -188,6 +188,7 @@ figure {
   top: 0;
   right: 1em;
   cursor: pointer;
+  z-index: 1;
   &:after {
     content: "×";
     color: rgba(255, 255, 255, 0.7);
